chore: add common tasks and pipelines

--- a/pipeline/gradle/jx-pullrequest-pipeline.yaml
+++ b/pipeline/gradle/jx-pullrequest-pipeline.yaml
@@ -131,6 +131,8 @@ spec:
       params:
         - name: PR_NUMBER
           value: $(params.PULL_NUMBER)
+        - name: FAIL
+          value: "false"
 
     - name: container-build
       taskRef:
