--- a/tasks/node-build-task.yaml
+++ b/tasks/node-build-task.yaml
@@ -16,9 +16,9 @@ spec:
       description: sources dir
   params:
     - name: IMAGE
-      description: node image
       type: string
-      default: "node:12.19.0-slim"
+      description: node image
+      default: "gcr.io/jenkinsxio/builder-nodejs12x:latest"
   steps:
     - name: install
       image: $(params.IMAGE)
@@ -32,7 +32,9 @@ spec:
       image: $(params.IMAGE)
       workingDir: $(workspaces.source.path)
       script: |
-        CI=true DISPLAY=:99 npm test
+        export CI=true
+        export DISPLAY=:99
+        npm test
 
     - name: build-prod
       image: $(params.IMAGE)
