--- a/pipeline/node/jx-pullrequest-pipeline.yaml
+++ b/pipeline/node/jx-pullrequest-pipeline.yaml
@@ -138,7 +138,7 @@ spec:
       taskRef:
         name: jx-kaniko
       runAfter:
-        - "jx-setup"
+        - "build"
       params:
         - name: IMAGE
           value: $(tasks.jx-setup.results.image)
