--- a/tasks/jx-kaniko-task.yaml
+++ b/tasks/jx-kaniko-task.yaml
@@ -1,54 +1,72 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: jx-kaniko
+  name: kaniko
   labels:
-    app.kubernetes.io/version: "0.2"
+    app.kubernetes.io/version: "0.1"
   annotations:
     tekton.dev/pipelines.minVersion: "0.12.1"
-    tekton.dev/tags: "docker"
-    tekton.dev/displayName: "kaniko-build"
+    tekton.dev/tags: image-build
 spec:
   description: >-
-    Build docker image
-  workspaces:
-    - name: source
-      description: sources dir
+    This Task builds source into a container image using Google's kaniko tool.
+    Kaniko doesn't depend on a Docker daemon and executes each
+    command within a Dockerfile completely in userspace. This enables
+    building container images in environments that can't easily or
+    securely run a Docker daemon, such as a standard Kubernetes cluster.
   params:
     - name: IMAGE
-      type: string
-      description: image what need to be published
-
+      description: Name (reference) of the image to build.
     - name: DOCKERFILE
-      type: string
-      description: image what need to be published
-      default: "Dockerfile"
+      description: Path to the Dockerfile to build.
+      default: ./Dockerfile
+    - name: CONTEXT
+      description: The build context used by Kaniko.
+      default: ./
+    - name: EXTRA_ARGS
+      default: ""
+    - name: BUILDER_IMAGE
+      description: The image on which builds will run
+      default: gcr.io/kaniko-project/executor:latest
+  workspaces:
+    - name: source
+  results:
+    - name: IMAGE-DIGEST
+      description: Digest of the image just built.
 
-    - name: CACHE_REPO
-      type: string
-      default: ""
-      description: KANIKO_FLAGS
-    - name: KANIKO_FLAGS
-      type: string
-      default: ""
-      description: KANIKO_FLAGS
   steps:
-    - name: build-container
-      image: gcr.io/kaniko-project/executor:debug-v0.24.0
+    - name: build-and-push
       workingDir: $(workspaces.source.path)
+      image: $(params.BUILDER_IMAGE)
+      # specifying DOCKER_CONFIG is required to allow kaniko to detect docker credential
+      # https://github.com/tektoncd/pipeline/pull/706
+      env:
+        - name: DOCKER_CONFIG
+          value: /tekton/home/.docker
       command:
         - /kaniko/executor
-        - $(params.KANIKO_FLAGS)
-        - --cache=true
-        - --cache-dir=/cache
-        - --context=$(workspaces.source.path)
+        - $(params.EXTRA_ARGS)
         - --dockerfile=$(params.DOCKERFILE)
+        - --context=$(workspaces.source.path)/$(params.CONTEXT)  # The user does not need to care the workspace and the source.
         - --destination=$(params.IMAGE)
-        - --cache-repo=$(params.CACHE_REPO)/cache
-      volumeMounts:
-        - name: cache-dir
-          mountPath: /cache
-
-  volumes:
-    - name: cache-dir
-      emptyDir: { }
+        - --oci-layout-path=$(workspaces.source.path)/$(params.CONTEXT)/image-digest
+      # kaniko assumes it is running as root, which means this example fails on platforms
+      # that default to run containers as random uid (like OpenShift). Adding this securityContext
+      # makes it explicit that it needs to run as root.
+      securityContext:
+        runAsUser: 0
+    - name: write-digest
+      workingDir: $(workspaces.source.path)
+      image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/imagedigestexporter:v0.16.2
+      # output of imagedigestexport [{"key":"digest","value":"sha256:eed29..660","resourceRef":{"name":"myrepo/myimage"}}]
+      command: ["/ko-app/imagedigestexporter"]
+      args:
+        - -images=[{"name":"$(params.IMAGE)","type":"image","url":"$(params.IMAGE)","digest":"","OutputImageDir":"$(workspaces.source.path)/$(params.CONTEXT)/image-digest"}]
+        - -terminationMessagePath=$(params.CONTEXT)/image-digested
+      securityContext:
+        runAsUser: 0
+    - name: digest-to-results
+      workingDir: $(workspaces.source.path)
+      image: stedolan/jq
+      script: |
+        cat $(params.CONTEXT)/image-digested | jq '.[0].value' -rj | tee /tekton/results/IMAGE-DIGEST
