chore: try kaniko build

--- a/pipelineRuns/node/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/pipelineRuns/node/.lighthouse/jenkins-x/pullrequest.yaml
@@ -16,7 +16,7 @@ spec:
             - ReadWriteOnce
           resources:
             requests:
-              storage: 800Mi
+              storage: 2Gi
   podTemplate:
     volumes:
       - name: podinfo
