--- a/pipeline/node/jx-release-pipeline.yaml
+++ b/pipeline/node/jx-release-pipeline.yaml
@@ -54,9 +54,7 @@ spec:
     - name: NEXT_VERSION_ARGS
       type: string
       description: release args
-      default:
-        - "--semantic-release"
-        - "--filename package.json"
+      default: "--semantic-release --filename package.json"
 
   workspaces:
     - name: shared-data
