chore: try kaniko build

--- a/pipeline/gradle/jx-release-pipeline.yaml
+++ b/pipeline/gradle/jx-release-pipeline.yaml
@@ -51,6 +51,11 @@ spec:
       name: REPO_URL
       type: string
 
+    - name: NEXT_VERSION_ARGS
+      type: string
+      description: release args
+      default: "--semantic-release"
+
   workspaces:
     - name: shared-data
       description: |
