--- a/pipeline/node/jx-release-pipeline.yaml
+++ b/pipeline/node/jx-release-pipeline.yaml
@@ -129,12 +129,10 @@ spec:
 
     - name: container-build
       taskRef:
-        name: jx-kaniko
+        name: kaniko
       runAfter:
         - "build"
       params:
-        - name: BUILDER_IMAGE
-          value: paketobuildpacks/builder:base
         - name: IMAGE
           value: $(tasks.jx-setup.results.image)
       workspaces:
