--- a/pipelineRuns/angular/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/pipelineRuns/angular/.lighthouse/jenkins-x/pullrequest.yaml
@@ -1,13 +1,13 @@
 apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
-  name: jx-release
+  name: jx-pullrequest
   labels:
     jenkins.io/pipelineType: build
     owner: vitech-team
 spec:
   pipelineRef:
-    name: jx-node-release
+    name: jx-angular-pullrequest
   workspaces:
     - name: shared-data
       volumeClaimTemplate:
@@ -29,5 +29,5 @@ spec:
         hostPath:
           path: /var/run/docker.sock
           type: Socket
-  serviceAccountName: "tekton-build-bot"
+  serviceAccountName: tekton-build-bot
   timeout: 1h
