--- a/packs/gradle/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/packs/gradle/.lighthouse/jenkins-x/pullrequest.yaml
@@ -7,7 +7,7 @@ metadata:
     owner: vitech-team
 spec:
   pipelineRef:
-    name: jx-angular-pullrequest
+    name: jx-gradle-pullrequest
   workspaces:
     - name: shared-data
       volumeClaimTemplate:
@@ -16,7 +16,7 @@ spec:
             - ReadWriteOnce
           resources:
             requests:
-              storage: 2Gi
+              storage: 250Mi
   podTemplate:
     volumes:
       - name: podinfo
@@ -29,5 +29,5 @@ spec:
         hostPath:
           path: /var/run/docker.sock
           type: Socket
-  serviceAccountName: tekton-bot
+  serviceAccountName: tekton-build-bot
   timeout: 1h
