--- a/pipeline/angular/jx-release-pipeline.yaml
+++ b/pipeline/angular/jx-release-pipeline.yaml
@@ -82,12 +82,6 @@ spec:
       workspaces:
         - name: source
           workspace: shared-data
-      env:
-        - name: GIT_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: jx-pipeline-git-github-github
-              key: password
       params:
         - name: BUILD_ID
           value: $(params.BUILD_ID)
@@ -151,6 +145,10 @@ spec:
           value: "$(params.REPO_NAME)"
         - name: SONAR_SECRET
           value: "sonar"
+        - name: REPO_OWNER
+          value: "$(params.REPO_OWNER)"
+        - name: REPO_NAME
+          value: "$(params.REPO_NAME)"
       workspaces:
         - name: source
           workspace: shared-data
