--- a/pipeline/sonar/sonar.yaml
+++ b/pipeline/sonar/sonar.yaml
@@ -1,13 +1,10 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: jx-gradle-release
-  labels:
-    jenkins.io/pipelineType: build
-    owner: vitech-team
+  name: jx-sonar-gradle-pullrequest
 spec:
   description: |
-    Release
+    description
   params:
     - description: the unique build number
       name: BUILD_ID
@@ -54,11 +51,6 @@ spec:
       name: REPO_URL
       type: string
 
-    - name: NEXT_VERSION_ARGS
-      type: string
-      description: release args
-      default: "--semantic-release"
-
   workspaces:
     - name: shared-data
       description: |
@@ -72,7 +64,6 @@ spec:
       workspaces:
         - name: output
           workspace: shared-data
-
       params:
         - name: url
           value: $(params.REPO_URL)
@@ -86,6 +77,8 @@ spec:
         - name: source
           workspace: shared-data
       params:
+        - name: GIT_CHECKOUT_STRATEGY
+          value: "branch"
         - name: BUILD_ID
           value: $(params.BUILD_ID)
         - name: JOB_NAME
@@ -98,6 +91,8 @@ spec:
           value: $(params.PULL_BASE_REF)
         - name: PULL_BASE_SHA
           value: $(params.PULL_BASE_SHA)
+        - name: PULL_NUMBER
+          value: $(params.PULL_NUMBER)
         - name: PULL_PULL_REF
           value: $(params.PULL_PULL_REF)
         - name: PULL_PULL_SHA
@@ -110,28 +105,12 @@ spec:
           value: $(params.REPO_OWNER)
         - name: REPO_URL
           value: $(params.REPO_URL)
-        - name: IS_RELEASE
-          value: "true"
 
     - name: build
       taskRef:
         name: gradle-build
       runAfter:
-        - "jx-setup"
-      workspaces:
-        - name: source
-          workspace: shared-data
-
-    - name: container-build
-      taskRef:
-        name: buildpacks
-      runAfter:
-        - "jx-setup"
-      params:
-        - name: BUILDER_IMAGE
-          value: paketobuildpacks/builder:base
-        - name: IMAGE
-          value: $(tasks.jx-setup.results.image)
+        - "fetch-repo"
       workspaces:
         - name: source
           workspace: shared-data
@@ -142,51 +121,22 @@ spec:
       runAfter:
         - "container-build"
       params:
-        - name: REPO_OWNER
-          value: "$(params.REPO_OWNER)"
-        - name: REPO_NAME
-          value: "$(params.REPO_NAME)"
         - name: SONAR_PROJECT_KEY
           value: "$(params.REPO_OWNER):$(params.REPO_NAME)"
         - name: SONAR_PROJECT_NAME
           value: "$(params.REPO_NAME)"
+        - name: SONAR_PR_BRANCH
+          value: "$(tasks.jx-setup.results.source_branch)"
+        - name: SONAR_PR_BASE
+          value: "$(params.PULL_BASE_REF)"
+        - name: SONAR_PR_KEY
+          value: "$(params.PULL_NUMBER)"
         - name: SONAR_SECRET
           value: "sonar"
-      workspaces:
-        - name: source
-          workspace: shared-data
-
-    - name: jx-finish-release
-      taskRef:
-        name: jx-finish-release
-      runAfter:
-        - "container-build"
-        - "sonar-check"
-      params:
-        - name: BUILD_ID
-          value: $(params.BUILD_ID)
-        - name: JOB_NAME
-          value: $(params.JOB_NAME)
-        - name: JOB_SPEC
-          value: $(params.JOB_SPEC)
-        - name: JOB_TYPE
-          value: $(params.JOB_TYPE)
-        - name: PULL_BASE_REF
-          value: $(params.PULL_BASE_REF)
-        - name: PULL_BASE_SHA
-          value: $(params.PULL_BASE_SHA)
-        - name: PULL_PULL_REF
-          value: $(params.PULL_PULL_REF)
-        - name: PULL_PULL_SHA
-          value: $(params.PULL_PULL_SHA)
-        - name: PULL_REFS
-          value: $(params.PULL_REFS)
-        - name: REPO_NAME
-          value: $(params.REPO_NAME)
         - name: REPO_OWNER
-          value: $(params.REPO_OWNER)
-        - name: REPO_URL
-          value: $(params.REPO_URL)
+          value: "$(params.REPO_OWNER)"
+        - name: REPO_NAME
+          value: "$(params.REPO_NAME)"
       workspaces:
         - name: source
           workspace: shared-data
