--- a/pipelineRuns/gradle/.lighthouse/jenkins-x/triggers.yaml
+++ b/pipelineRuns/gradle/.lighthouse/jenkins-x/triggers.yaml
@@ -9,6 +9,13 @@ spec:
     trigger: "/test"
     rerun_command: "/retest"
     source: "pullrequest.yaml"
+  - name: sonar
+    context: "sonar"
+    always_run: true
+    optional: false
+    trigger: "/sonar"
+    rerun_command: "/resonar"
+    source: "sonar.yaml"
   postsubmits:
   - name: release
     context: "release"
