--- a/tasks/gradle-build-task.yaml
+++ b/tasks/gradle-build-task.yaml
@@ -21,21 +21,21 @@ spec:
       default: "gradle:6.3.0-jdk11"
     - name: JAVA_OPTIONS
       default: "-Xms10m -Xmx192m"
-  results:
-    - name: commit
-      description: The precise commit SHA that was fetched by this Task
-    - name: url
-      description: The precise URL that was fetched by this Task
+    - name: ARGS
+      description: gradle exctra args
+      type: array
+      default:
+        - clean
+        - build
+        - --no-daemon
   steps:
-    - name: build-gradle-build
+    - name: build
       image: $(params.IMAGE)
       workingDir: $(workspaces.source.path)
       command:
         - gradle
       args:
-        - clean
-        - build
-        - --no-daemon
+        - "$(params.ARGS[*])"
       env:
         - name: _JAVA_OPTIONS
           value: $(params.JAVA_OPTIONS)
