--- a/tasks/sonar-task.yaml
+++ b/tasks/sonar-task.yaml
@@ -1,4 +1,3 @@
-# TODO: add PR comment with results
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
@@ -51,6 +50,13 @@ spec:
 
     - name: SONAR_SECRET
       description: Name of sonar secret
+
+    - name: REPO_OWNER
+      description: repository owner
+      default: ""
+    - name: REPO_NAME
+      description: repository name
+      default: ""
   results:
     - name: url
       description: Sonar analys URL
@@ -64,6 +70,11 @@ spec:
             secretKeyRef:
               name: $(params.SONAR_SECRET)
               key: sonar-organization
+        - name: SONAR_SCM_PROVIDER
+          valueFrom:
+            secretKeyRef:
+              name: $(params.SONAR_SECRET)
+              key: sonar-scm-provider
       script: |
         #!/usr/bin/env bash
         replaceValues() {
@@ -90,6 +101,14 @@ spec:
 
           if [[ -n "$(params.SONAR_PROJECT_NAME)" ]]; then
             replaceValues $(workspaces.source.path)/sonar-project.properties sonar.projectName $(params.SONAR_PROJECT_NAME)
+          fi
+
+          if [[ -n "${SONAR_SCM_PROVIDER}" ]]; then
+              replaceValues $(workspaces.source.path)/sonar-project.properties sonar.scm.provider ${SONAR_SCM_PROVIDER}
+          fi
+
+          if [[ -n "$(params.REPO_OWNER)"  && -n "$(params.REPO_NAME)" ]]; then
+              replaceValues $(workspaces.source.path)/sonar-project.properties sonar.pullrequest.github.repository $(params.REPO_OWNER)/$(params.REPO_NAME)
           fi
 
           if [[ -n "${SONAR_ORGANIZATION}" ]]; then
@@ -119,7 +138,7 @@ spec:
       image: sonarsource/sonar-scanner-cli
       workingDir: $(workspaces.source.path)
       script: |
-        sonar-scanner -Dsonar.login=${SONAR_TOKEN} | grep "ANALYSIS " | grep -Eo '(http|https).+' > $(results.url.path)
+        sonar-scanner -Dsonar.login=${SONAR_TOKEN}
         rm -rf .scannerwork
       env:
         - name: SONAR_TOKEN
