--- a/pipeline/angular/sonar.yaml
+++ b/pipeline/angular/sonar.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: jx-gradle-pullrequest
+  name: jx-sonar-angular-pullrequest
 spec:
   description: |
     description
@@ -64,7 +64,6 @@ spec:
       workspaces:
         - name: output
           workspace: shared-data
-
       params:
         - name: url
           value: $(params.REPO_URL)
@@ -77,8 +76,9 @@ spec:
       workspaces:
         - name: source
           workspace: shared-data
-
       params:
+        - name: GIT_CHECKOUT_STRATEGY
+          value: "branch"
         - name: BUILD_ID
           value: $(params.BUILD_ID)
         - name: JOB_NAME
@@ -108,130 +108,35 @@ spec:
 
     - name: build
       taskRef:
-        name: gradle-build
+        name: node-build
       runAfter:
         - "jx-setup"
       workspaces:
         - name: source
           workspace: shared-data
 
-    - name: conventionalcommits
+    - name: sonar-check
       taskRef:
-        name: conventional-commits
-      runAfter:
-        - "jx-setup"
-      workspaces:
-        - name: source
-          workspace: shared-data
-      params:
-        - name: PR_NUMBER
-          value: $(params.PULL_NUMBER)
-        - name: FAIL
-          value: "false"
-
-    - name: container-build
-      taskRef:
-        name: buildpacks
-      runAfter:
-        - "jx-setup"
-      params:
-        - name: BUILDER_IMAGE
-          value: paketobuildpacks/builder:base
-        - name: IMAGE
-          value: $(tasks.jx-setup.results.image)
-      workspaces:
-        - name: source
-          workspace: shared-data
-
-    - name: snyk-container-check
-      taskRef:
-        name: snyk
-      runAfter:
-        - "container-build"
-      params:
-        - name: SNYK_IMAGE
-          value: "snyk/snyk:docker"
-        - name: SNYK_COMMAND
-          value: "container"
-        - name: IMAGE
-          value: $(tasks.jx-setup.results.image)
-        - name: MONITOR_ARGS
-          value:
-            - "--project-name=$(params.REPO_OWNER)/$(params.REPO_NAME)/$(tasks.jx-setup.results.source_branch)"
-        - name: TEST_ARGS
-          value:
-            - "--severity-threshold=medium"
-        - name: SNYK_SECRET
-          value: snyk
-        - name: PR_ID
-          value: "$(params.PULL_NUMBER)"
-        - name: FAIL
-          value: "false"
-
-      workspaces:
-        - name: source
-          workspace: shared-data
-
-    - name: snyk-dependency-check
-      taskRef:
-        name: snyk
+        name: sonarqube-scanner
       runAfter:
         - "build"
       params:
-        - name: SNYK_IMAGE
-          value: "snyk/snyk:gradle-jdk11"
-        - name: SNYK_COMMAND
-          value: ""
-        - name: MONITOR_ARGS
-          value:
-            - "--remote-repo-url=$(params.REPO_URL)"
-            - "--project-name=$(params.REPO_OWNER)/$(params.REPO_NAME)/$(tasks.jx-setup.results.source_branch)"
-        - name: TEST_ARGS
-          value:
-            - "--severity-threshold=medium"
-        - name: SNYK_SECRET
-          value: snyk
-        - name: PR_ID
+        - name: SONAR_PROJECT_KEY
+          value: "$(params.REPO_OWNER):$(params.REPO_NAME)"
+        - name: SONAR_PROJECT_NAME
+          value: "$(params.REPO_NAME)"
+        - name: SONAR_PR_BRANCH
+          value: "$(tasks.jx-setup.results.source_branch)"
+        - name: SONAR_PR_BASE
+          value: "$(params.PULL_BASE_REF)"
+        - name: SONAR_PR_KEY
           value: "$(params.PULL_NUMBER)"
-        - name: FAIL
-          value: "false"
-      workspaces:
-        - name: source
-          workspace: shared-data
-
-    - name: jx-finish
-      taskRef:
-        name: jx-finish-pr
-      runAfter:
-        - "container-build"
-        - "snyk-container-check"
-      params:
-        - name: BUILD_ID
-          value: $(params.BUILD_ID)
-        - name: JOB_NAME
-          value: $(params.JOB_NAME)
-        - name: JOB_SPEC
-          value: $(params.JOB_SPEC)
-        - name: JOB_TYPE
-          value: $(params.JOB_TYPE)
-        - name: PULL_BASE_REF
-          value: $(params.PULL_BASE_REF)
-        - name: PULL_BASE_SHA
-          value: $(params.PULL_BASE_SHA)
-        - name: PULL_NUMBER
-          value: $(params.PULL_NUMBER)
-        - name: PULL_PULL_REF
-          value: $(params.PULL_PULL_REF)
-        - name: PULL_PULL_SHA
-          value: $(params.PULL_PULL_SHA)
-        - name: PULL_REFS
-          value: $(params.PULL_REFS)
-        - name: REPO_NAME
-          value: $(params.REPO_NAME)
+        - name: SONAR_SECRET
+          value: "sonar"
         - name: REPO_OWNER
-          value: $(params.REPO_OWNER)
-        - name: REPO_URL
-          value: $(params.REPO_URL)
+          value: "$(params.REPO_OWNER)"
+        - name: REPO_NAME
+          value: "$(params.REPO_NAME)"
       workspaces:
         - name: source
           workspace: shared-data
