chore: add leaks scan

--- a/tasks/secrets-scan.yaml
+++ b/tasks/secrets-scan.yaml
@@ -59,7 +59,7 @@ spec:
         if [[ "$(cat $(results.status.path))" == "failed" ]]; then
           if [[ -n "$(params.PR_ID)" ]]; then
             REPORT="$(cat $(results.report.json.path))"
-            echo -e ":spider: Some leasks have been found \n <details> \n\n \`\`\` \n $REPORT \n \`\`\` \n\n</details>" > .report
+            echo -e ":spider: Some leaks have been found \n <details> \n\n \`\`\` \n $REPORT \n \`\`\` \n\n</details>" > .report
             jx gitops pr comment --comment="$(cat .report)" --pr="$(params.PR_ID)"
           fi
           exit 1
