chore: add leaks scan

--- a/tasks/secrets-scan.yaml
+++ b/tasks/secrets-scan.yaml
@@ -45,10 +45,10 @@ spec:
     - name: print-report
       image: zricethezav/gitleaks
       workingDir: $(workspaces.source.path)
-      command:
-        - cat
-      args:
-        - $(results.report.json.path)
+      script: |
+        if [[ "$(cat $(results.status.path))" == "failed" ]]; then
+          cat $(results.report.json.path)
+        fi
 
     - name: comment
       image: gcr.io/jenkinsxio/jx-cli:latest
