--- a/packs/angular/.lighthouse/secrets/triggers.yaml
+++ b/packs/angular/.lighthouse/secrets/triggers.yaml
@@ -6,8 +6,8 @@ spec:
       context: "secrets"
       always_run: true
       optional: false
-      trigger: (?m)^/test( all| secrets),?(s+|$)
-      rerun_command: /test secrets
+      trigger: /gitleaks
+      rerun_command: /gitleaks
       source: "secrets.yaml"
   postsubmits:
 
