feat: verify sonar status

--- a/tasks/sonar-task.yaml
+++ b/tasks/sonar-task.yaml
@@ -138,8 +138,37 @@ spec:
       image: sonarsource/sonar-scanner-cli
       workingDir: $(workspaces.source.path)
       script: |
-        sonar-scanner -Dsonar.login=${SONAR_TOKEN}
+        sonar-scanner -Dsonar.login=${SONAR_TOKEN} > .sonar
+        cat .sonar
+        cat .sonar | grep "More about the report processing at" | grep -Eo '(http|https).+' > .status_link
         rm -rf .scannerwork
+      env:
+        - name: SONAR_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: $(params.SONAR_SECRET)
+              key: sonar-login
+
+    - name: verify-sonar-status
+      image: gcr.io/jenkinsxio/jx-cli:latest
+      workingDir: $(workspaces.source.path)
+      script: |
+        #!/usr/bin/env bash
+        while !(curl -u $SONAR_TOKEN: -v --silent "$(cat .status_link)" --stderr - | grep '"status":"SUCCESS"' > /dev/null;)
+        do
+          sleep 1;
+        done
+        export ANALYSIS_ID=$(curl -u $SONAR_TOKEN: -v --silent "$(cat .status_link)" --stderr - | grep -Po '(?<="analysisId":")[^"\\]*(?:\\.[^"\\]*)*')
+        curl -u $SONAR_TOKEN: -v --silent "https://sonarcloud.io/api/qualitygates/project_status?analysisId=$ANALYSIS_ID&pullRequest=$SONAR_PR_KEY" > .quality_gate
+        cat .quality_gate
+        cat .quality_gate | grep -Po '(?<="projectStatus":{"status":")[^"\\]*(?:\\.[^"\\]*)*' > .status
+        printf "\nStatus:"
+        cat .status
+        if [[ $(< .status) != "OK" ]]; then
+          echo "Sonar status failed!"
+          exit 1;
+        fi
+        echo "Sonar status successful!"
       env:
         - name: SONAR_TOKEN
           valueFrom:
