--- a/packs/spring-gradle/.lighthouse/jenkins-x/jx-pullrequest-pipeline.yaml
+++ b/packs/spring-gradle/.lighthouse/jenkins-x/jx-pullrequest-pipeline.yaml
@@ -127,7 +127,7 @@ spec:
         - name: PR_NUMBER
           value: $(params.PULL_NUMBER)
         - name: FAIL
-          value: "false"
+          value: "true"
 
     - name: container-build
       taskRef:
