--- a/tasks/jx-release-pipeline.yaml
+++ b/tasks/jx-release-pipeline.yaml
@@ -1,10 +1,13 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: jx-angular-pullrequest
+  name: jx-gradle-release
+  labels:
+    jenkins.io/pipelineType: build
+    owner: vitech-team
 spec:
   description: |
-    description
+    Release
   params:
     - description: the unique build number
       name: BUILD_ID
@@ -51,6 +54,11 @@ spec:
       name: REPO_URL
       type: string
 
+    - name: NEXT_VERSION_ARGS
+      type: string
+      description: release args
+      default: "--semantic-release"
+
   workspaces:
     - name: shared-data
       description: |
@@ -90,8 +98,6 @@ spec:
           value: $(params.PULL_BASE_REF)
         - name: PULL_BASE_SHA
           value: $(params.PULL_BASE_SHA)
-        - name: PULL_NUMBER
-          value: $(params.PULL_NUMBER)
         - name: PULL_PULL_REF
           value: $(params.PULL_PULL_REF)
         - name: PULL_PULL_SHA
@@ -104,104 +110,58 @@ spec:
           value: $(params.REPO_OWNER)
         - name: REPO_URL
           value: $(params.REPO_URL)
+        - name: IS_RELEASE
+          value: "true"
 
     - name: build
       taskRef:
-        name: node-build
+        name: gradle-build
       runAfter:
         - "jx-setup"
       workspaces:
         - name: source
           workspace: shared-data
-
-    - name: conventionalcommits
-      taskRef:
-        name: conventional-commits
-      runAfter:
-        - "jx-setup"
-      workspaces:
-        - name: source
-          workspace: shared-data
-      params:
-        - name: PR_NUMBER
-          value: $(params.PULL_NUMBER)
-        - name: FAIL
-          value: "false"
 
     - name: container-build
       taskRef:
-        name: kaniko
+        name: buildpacks
       runAfter:
-        - "build"
+        - "jx-setup"
       params:
+        - name: BUILDER_IMAGE
+          value: paketobuildpacks/builder:base
         - name: IMAGE
           value: $(tasks.jx-setup.results.image)
       workspaces:
         - name: source
           workspace: shared-data
 
-    - name: snyk-container-check
+    - name: sonar-check
       taskRef:
-        name: snyk
+        name: sonarqube-scanner
       runAfter:
         - "container-build"
       params:
-        - name: SNYK_IMAGE
-          value: "snyk/snyk:docker"
-        - name: SNYK_COMMAND
-          value: "container"
-        - name: IMAGE
-          value: $(tasks.jx-setup.results.image)
-        - name: MONITOR_ARGS
-          value:
-            - "--project-name=$(params.REPO_OWNER)/$(params.REPO_NAME)/$(tasks.jx-setup.results.source_branch)"
-        - name: TEST_ARGS
-          value:
-            - "--severity-threshold=medium"
-        - name: SNYK_SECRET
-          value: snyk
-        - name: PR_ID
-          value: "$(params.PULL_NUMBER)"
-        - name: FAIL
-          value: "false"
-
+        - name: REPO_OWNER
+          value: "$(params.REPO_OWNER)"
+        - name: REPO_NAME
+          value: "$(params.REPO_NAME)"
+        - name: SONAR_PROJECT_KEY
+          value: "$(params.REPO_OWNER):$(params.REPO_NAME)"
+        - name: SONAR_PROJECT_NAME
+          value: "$(params.REPO_NAME)"
+        - name: SONAR_SECRET
+          value: "sonar"
       workspaces:
         - name: source
           workspace: shared-data
 
-    - name: snyk-dependency-check
+    - name: jx-finish-release
       taskRef:
-        name: snyk
-      runAfter:
-        - "build"
-      params:
-        - name: SNYK_IMAGE
-          value: "snyk/snyk:gradle-jdk11"
-        - name: SNYK_COMMAND
-          value: ""
-        - name: MONITOR_ARGS
-          value:
-            - "--remote-repo-url=$(params.REPO_URL)"
-            - "--project-name=$(params.REPO_OWNER)/$(params.REPO_NAME)/$(tasks.jx-setup.results.source_branch)"
-        - name: TEST_ARGS
-          value:
-            - "--severity-threshold=medium"
-        - name: SNYK_SECRET
-          value: snyk
-        - name: PR_ID
-          value: "$(params.PULL_NUMBER)"
-        - name: FAIL
-          value: "false"
-      workspaces:
-        - name: source
-          workspace: shared-data
-
-    - name: jx-finish
-      taskRef:
-        name: jx-finish-pr
+        name: jx-finish-release
       runAfter:
         - "container-build"
-        - "snyk-container-check"
+        - "sonar-check"
       params:
         - name: BUILD_ID
           value: $(params.BUILD_ID)
@@ -215,8 +175,6 @@ spec:
           value: $(params.PULL_BASE_REF)
         - name: PULL_BASE_SHA
           value: $(params.PULL_BASE_SHA)
-        - name: PULL_NUMBER
-          value: $(params.PULL_NUMBER)
         - name: PULL_PULL_REF
           value: $(params.PULL_PULL_REF)
         - name: PULL_PULL_SHA
