--- a/packs/angular/preview/helmfile.yaml
+++ b/packs/angular/preview/helmfile.yaml
@@ -1,13 +1,17 @@
+environments:
+  default:
+    values:
+    - jx-values.yaml
 releases:
-- chart: '../{{ requiredEnv "APP_NAME" }}'
+- chart: '../charts/{{ requiredEnv "APP_NAME" }}'
   name: preview
   wait: true
   createNamespace: true
   namespace: '{{ requiredEnv "PREVIEW_NAMESPACE" }}'
   values:
-  - values.yaml.gotmpl
   - jx-values.yaml
   - imagePullSecrets.yaml
+  - values.yaml.gotmpl
   hooks:
   - events: ["presync"]
     showlogs: true
