chore: change service account for secrets scanner

--- a/packs/angular/.lighthouse/secrets/secrets.yaml
+++ b/packs/angular/.lighthouse/secrets/secrets.yaml
@@ -17,5 +17,5 @@ spec:
           resources:
             requests:
               storage: 250Mi
-  serviceAccountName: tekton-build-bot
+  serviceAccountName: tekton-bot
   timeout: 1h
