--- a/packs/environment/.lighthouse/secrets/secrets.yaml
+++ b/packs/environment/.lighthouse/secrets/secrets.yaml
@@ -17,5 +17,5 @@ spec:
           resources:
             requests:
               storage: 250Mi
-  serviceAccountName: tekton-build-bot
+  serviceAccountName: tekton-bot
   timeout: 1h
