--- a/packs/spring-gradle/charts/templates/deployment.yaml
+++ b/packs/spring-gradle/charts/templates/deployment.yaml
@@ -39,15 +39,19 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
+{{ if .Values.envValueFrom }}
 {{ toYaml .Values.envValueFrom | indent 8 }}
+{{- end}}
         - name: VERSION
           value: {{ .Chart.Version }}
 {{- range $pkey, $pval := .Values.env }}
         - name: {{ $pkey }}
           value: {{ quote $pval }}
 {{- end }}
+{{ if .Values.envFrom }}
         envFrom:
 {{ toYaml .Values.envFrom | indent 10 }}
+{{- end}}
         ports:
         - name: http
           containerPort: {{ int .Values.service.internalPort }}
